<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mau3">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtttcn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttn"
        android:textAlignment="center"
        android:textSize="30dp"
        android:background="@color/mau2"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/txtten"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/hoten"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edthoten"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:hint="@string/xhten" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/txtcmnd"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/cmnd"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/edtcmnd"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:hint="@string/xhcmnd"
            android:inputType="number"
            android:enabled="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtbc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bangcap"
        android:textAlignment="center"
        android:textSize="30dp"
        android:background="@color/mau1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bangcap"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:padding="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tc"
            android:text="@string/trungcap"
            android:paddingRight="10dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cd"
            android:text="@string/caodang"
            android:paddingRight="10dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dh"
            android:text="@string/daihoc"
            android:paddingRight="10dp"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txtsothich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sothich"
        android:textAlignment="center"
        android:textSize="30dp"
        android:background="@color/mau1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_margin="30dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/docbao"
            android:text="@string/docbao"
            android:paddingRight="10dp"
            android:enabled="false"/>

    <CheckBox
        android:id="@+id/docsach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/docsach"
        android:enabled="false"
        android:checked="true"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doccode"
            android:text="@string/doccoding"
        android:enabled="false"
            android:paddingRight="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtttbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttbs"
        android:textAlignment="center"
        android:textSize="30dp"
        android:background="@color/mau1"/>

    <EditText
        android:id="@+id/edtbs"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/xhn" />

    <Button
        android:id="@+id/btndy"
        android:layout_width="283dp"
        android:layout_height="59dp"
        android:layout_margin="60dp"
        android:text="@string/gui"
        android:enabled="false"/>

</LinearLayout>
</ScrollView>